[package]
name = "pi-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "OpenCode-compatible HTTP API server backed by pi --rpc processes"
license = "MIT"

[lib]
name = "pi_server"
path = "src/lib.rs"

[[bin]]
name = "pi-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
axum = { version = "0.7.9", features = ["json", "macros", "tokio"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
dirs = "6.0.0"
futures = "0.3.31"
ignore = "0.4.24"
regex = "1.12.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tempfile = "3.25.0"
tower = { version = "0.5.2", features = ["util"] }
